# HOMESTRI-UR5e-Robotiq2f85

./: .gitmodules  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  noetic.Dockerfile  nvidia_cuda_noetic.Dockerfile
.github/workflows/: docker-image.yml
catkin_ws/src/homestri-ur/homestri_behavior_trees/: CMakeLists.txt  package.xml
catkin_ws/src/homestri-ur/homestri_behavior_trees/bt_xml/: fallback_sub_tree_test.xml  fallback_test_2.xml  pick_and_place_example_single_file.xml
catkin_ws/src/homestri-ur/homestri_behavior_trees/include/homestri_behavior_trees/: action_nodes.h
catkin_ws/src/homestri_ur/homestri_planning_interface/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/homestri_ur/homestri_planning_interface/config/: planning_interface.yaml
catkin_ws/src/homestri_ur/homestri_planning_interface/launch/: planning_interface.launch
catkin_ws/src/homestri_ur/homestri_planning_interface/scripts/: planning_interface  test_compliant_traj
catkin_ws/src/homestri_ur/homestri_planning_interface/src/homestri_planning_interface/: planning_interface.py
catkin_ws/src/homestri_ur/homestri_planning_interface/srv/: SimplePlan.srv
homestri_a_bot_moveit_config/: .setup_assistant
homestri_a_bot_moveit_config/config/: a_bot_scene.srdf
homestri_a_bot_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  stomp_planning_pipeline.launch.xml
homestri_b_bot_moveit_config/: .setup_assistant  package.xml
homestri_b_bot_moveit_config/config/: b_bot_scene.srdf  gazebo_b_bot_scene.urdf  gazebo_controllers.yaml  joint_limits.yaml  simple_moveit_controllers.yaml
homestri_b_bot_moveit_config/launch/: demo.launch  gazebo.launch  gazebo_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  run_benchmark_ompl.launch  setup_assistant.launch
homestri_behavior_trees/: CMakeLists.txt  package.xml
homestri_behavior_trees/bt_xml/: fallback_sub_tree_test.xml  fallback_test.xml  pick.xml  pick_and_place_example.xml  pick_and_place_example_single_file.xml  pick_and_place_subtree.xml  pick_subtree.xml  place_subtree.xml  search_sort.xml
homestri_behavior_trees/bt_xml/aruco_pick_example/: aruco_pick_example.xml
homestri_behavior_trees/bt_xml/build_plate_pick_component/: main_tree.xml
homestri_behavior_trees/bt_xml/build_plate_scenario/: main_tree.xml
homestri_behavior_trees/bt_xml/build_plate_transfer/: main_tree.xml
homestri_behavior_trees/bt_xml/pick_and_place_example/: pick_and_place_example.xml  pick_and_place_subtree.xml  pick_subtree.xml  place_subtree.xml
homestri_behavior_trees/bt_xml/robinzen_collect_tools/: detect_frames_subtree.xml  motion_joint_traj_subtree.xml  pick_cartesian_subtree.xml  place_cartesian_subtree.xml  robinzen_collect_tools.xml  robinzen_collect_tools_maintree.xml  robinzen_collect_tools_temp.xml
homestri_behavior_trees/bt_xml/robinzen_move_tool_pallet/: robinzen_move_tool_pallet.xml
homestri_behavior_trees/bt_xml/robinzen_open_latches/: robinzen_close_latches_subtree.xml  robinzen_open_latches.xml  robinzen_open_latches_subtree.xml
homestri_behavior_trees/bt_xml/robinzen_pull_handle/: robinzen_pull_handle.xml
homestri_behavior_trees/include/homestri_behavior_trees/: action_nodes.h  condition_nodes.h  node_input_conversions.h
homestri_behavior_trees/launch/: my_bt.launch
homestri_behavior_trees/src/: test_bt.cpp  test_explain_bt.cpp
homestri_bringup/: CMakeLists.txt  package.xml
homestri_bringup/config/: a_bot_calibration.yaml  a_bot_controllers.yaml  b_bot_controllers.yaml  cartesian.rviz  tags.yaml  ur5e_controllers.yaml
homestri_bringup/launch/: a_bot_bringup.launch  a_bot_gazebo.launch  b_bot_bringup.launch  b_bot_teleop.launch  homestri_calibration.launch  homestri_cartesian.launch  homestri_moveit.launch
homestri_bringup/rviz/: a_bot_bringup.rviz  b_bot_bringup.rviz  b_bot_gazebo.rviz
homestri_description/config/: ur5e_joint_limits.yaml
homestri_description/launch/: display.launch  urdf.rviz
homestri_manipulation/: CMakeLists.txt  package.xml
homestri_manipulation/config/: static_transform.yaml  tags.yaml
homestri_manipulation/src/: cartesian_control_action_server.py  compliance_control_action_server.py  compliance_controller_action_server.py  force_control_action_server.py  geometry_msgs_utils.py  homestri_demo.py  manipulation_action_server.py  move_groups.py
homestri_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
homestri_moveit_config/config/: base_scene.srdf  fake_controllers.yaml  gazebo_base_scene.urdf  gazebo_controllers.yaml  gazebo_moveit_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
homestri_moveit_servo/: CMakeLists.txt  package.xml
homestri_msgs/: CMakeLists.txt  package.xml
homestri_msgs/action/: CartesianControl.action  ComplianceControl.action  ExecuteBehaviorTree.action  ForceControl.action  Manipulation.action
homestri_robot_description/: CMakeLists.txt  package.xml
homestri_robot_description/config/: gazebo_ur5e_joint_limits.yaml  ur5e_joint_limits.yaml
homestri_robot_description/launch/: spawn_box.launch
homestri_robot_description/urdf/: base_scene.urdf.xacro  base_scene.xacro  environment.urdf.xacro  environment.xacro  robotiq_2f_85_macro.urdf.xacro  robotiq_2f_85_macro.xacro  ur5_e_robotiq_2f_85.urdf.xacro  ur5_e_robotiq_2f_85_macro.urdf.xacro  ur5e_macro.urdf.xacro  ur5e_macro.xacro  ur5e_robotiq.urdf.xacro  workspace.xacro
homestri_robot_description/urdf/parts/: box.urdf  box.xacro  plastic_bin.urdf  plastic_bin.xacro
homestri_robot_description/worlds/: basic.world
homestri_scene_description/: CMakeLists.txt  package.xml
homestri_vision/: CMakeLists.txt  package.xml
test_move_group/: CMakeLists.txt  package.xml
(+167 files in other folders)
