<?xml version="1.0"?>
<package format="2">
  <name>homestri_manipulation</name>
  <version>0.0.0</version>
  <description>The homestri_manipulation package</description>

  <maintainer email="itchuang@ucdavis.edu">Ian Chuang</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>tf</depend>
  <depend>moveit_core</depend>
  <depend>moveit_visual_tools</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>

  <depend>homestri_msgs</depend>

</package>
