<?xml version="1.0"?>
<package format="2">
  <name>homestri_msgs</name>
  <version>0.0.0</version>
  <description>The homestri_msgs package</description>

  <maintainer email="itchuang@ucdavis.edu">Ian Chuang</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  
</package>
